infrastructure/configs/networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vlan200-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.200.100
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.k8s.logikdev.fr"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: k8s-logikdev-fr-tls
