infrastructure/configs/networking/gateways.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vlan200-gateway
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 10.0.200.100
  listeners:
    - name: https
      hostname: "*.k8s.home.logikdev.fr"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ingress-tls
      allowedRoutes:
        namespaces:
          from: All
